--- a/abi-types-generator/package.json
+++ b/abi-types-generator/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ethereum-abi-types-generator",
-  "version": "1.3.4",
+  "name": "@agurodriguez/ethereum-abi-types-generator",
+  "version": "1.3.6",
   "description": "Generate types from an ethereum ABI json file.",
   "main": "dist/index.js",
   "scripts": {
